--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -255,8 +255,7 @@ margin-top: -4rem;
   display: block;
   width: 100%;
   border-radius: 1rem;
-  height: 15rem;
-=======
+
 .inline-items a {
     font-family: 'archivo-regular', sans-serif;
     font-size: 1em;
@@ -1062,7 +1061,7 @@ label.label-heading {
 
 .card {
   position: relative;
-
+}
 /* css searchresult page */
 
 .search-results h2{
@@ -1073,5 +1072,4 @@ label.label-heading {
   font-family: 'clash-bold', sans-serif;
   text-transform: uppercase;
   font-size: 1.5em;
-  
 }
