--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -341,7 +341,8 @@ margin-top: -4rem;
   width: 100%;
   border-radius: 1rem;
   height: 15rem;
-=======
+}
+
 .inline-items a {
     font-family: 'archivo-regular', sans-serif;
     font-size: 1em;
@@ -484,6 +485,7 @@ margin-top: -4rem;
 .filmdetail-description p:nth-of-type(2){
     font-family: archivo-regular;
     font-size: 0.9em;
+    color: black;
 }
 
 .filmdetail-description p:nth-of-type(3){
@@ -683,10 +685,6 @@ main .filmdetail-swiper .filmdetail-wrapper .filmdetail-slide {
 }
 
 /* Animations */
-.filmdetail-hidden {
-    opacity: 0;
-    transition: all 1s;
-}
 
 .filmdetail-show {
     opacity: 1;
@@ -894,7 +892,7 @@ label input {
   flex-grow: 1;
   padding-top: 30px;
   z-index: 100;
-
+}
 
 button:hover,
 button:focus {
@@ -1166,6 +1164,7 @@ label.label-heading {
 
 .card {
   position: relative;
+}
 
 /* css searchresult page */
 
@@ -1205,4 +1204,3 @@ label.label-heading {
   height: 15em;
   object-fit: cover;
 }
-
