--- a/view/favourites.ejs
+++ b/view/favourites.ejs
@@ -28,9 +28,9 @@
                             <div class="overlay">
                                 <h1>test</h1>
                             </div>
-                            <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>"
-                                alt="Image <%= i + 1 %>">
-                            
+                            <a href="/movie/<%= urlTitleArray[i] %>">
+                                <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                            </a>
                         </li>
                         <% } %>
 
@@ -45,7 +45,9 @@
             <section class="gsap-wrapper">
                 <% for(let i=0; i < posterPathArray.length; i++) { %>
                     <article class="gsap-slide movie-card">
-                        <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                        <a href="/movie/<%= urlTitleArray[i] %>">
+                            <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
+                        </a>
                     </article>
                     <% } %>
             </section>
@@ -54,7 +56,6 @@
         <script>
        document.addEventListener('DOMContentLoaded', (event) => {
     console.log('DOM fully loaded and parsed');
-
     var mySwiper = new Swiper('.mySwiper', {
         loop: true,
         effect: 'coverflow',
@@ -77,18 +78,15 @@
             },
         },
     });
-
     new Swiper('.swiper-wrapper', {
         slidesPerView: 'auto',
         freeMode: false,
         spaceBetween: 5,
     });
-
     const slides = document.querySelectorAll('.gsap-slide');
     let currentSlide = 0;
     const slideWidth = slides[0].offsetWidth;
     const totalSlides = slides.length;
-
     function slideTo(index) {
         gsap.to('.gsap-wrapper', {
             scrollLeft: slideWidth * index,
