--- a/view/add-confirmation.ejs
+++ b/view/add-confirmation.ejs
@@ -1,1 +1,18 @@
-<%= originalTitleArray[i] %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    Movie Added
+</body>
+<script>
+    setTimeout(function () {
+        const initialDetailPageURL = "<%= initialDetailPageURL %>"
+       window.location = initialDetailPageURL
+    }, 2000)
+  </script>
+</html>
